--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -102,7 +102,7 @@
 
 
 <script>
-$(document).on('page:change', function(){
+$(document).ready(function(e){
   
   $( "#dj-select" ).select2({
     tags: true,
