--- a/app/views/djs/index.html.erb
+++ b/app/views/djs/index.html.erb
@@ -15,7 +15,7 @@
 </div>
 
 <script>
-$(document).on('page:change', function(){
+$(document).ready(function(e){
   $(function() {
     return $('#masonry-container').imagesLoaded(function() {
       return $('#masonry-container').masonry({
