--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -12,7 +12,7 @@
 
 
 <script>
-  $(document).on("page:change", function(){
+  $(document).ready(function(e){
 
     if ($(window).width() < 750) {
 
