--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,8 +56,9 @@
 <div class="col-xs-12">
   <footer>
     <div class="container">
-      <div class="col-md-4 foot1 hidden-xs">
+      <div class="col-xs-6 col-md-4 foot1">
         <h3>INFO</h3>
+        <div class="foot-line"></div>
         <ul>
           <li><p><%= link_to "首頁", root_path %></p></li>
           <li><p><%= link_to "活動訊息", events_path %></p></li>
@@ -65,8 +66,9 @@
           <li><p><%= link_to "DJ", djs_path %></p></li>
         </ul>
       </div>
-      <div class="col-md-4 foot2">
+      <div class="col-xs-6 col-md-4 foot2">
         <h3>SERVICE</h3>
+        <div class="foot-line"></div>
         <ul>
           <li><p>消費資詢</p></li>
           <li><p>包廂訂位</p></li>
@@ -76,8 +78,9 @@
           <li><p>校際聯誼</p></li>
         </ul> 
       </div>
-      <div class="col-md-4 foot3">
+      <div class="col-xs-12 col-md-4 foot3">
         <h3>CONTACT US</h3>
+        <div class="foot-line"></div>
         <br>
         <%= form_for @contact, :url => contacts_path do |f|  %>
           <div class="form-group">
