--- a/app/views/admin/store/_form.html.erb
+++ b/app/views/admin/store/_form.html.erb
@@ -1,99 +1,110 @@
 <% arr = Category.all.map{ |x| [x.name, x.id] } %>
 <% arr.shift %>
 
-<div class="col-md-7">
+  <div class="row">
+  <div class="col-md-7">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">Store info</h3>
+      </div>
+      <div class="panel-body">
+        <div class="form-group">
+          <%= n.label :category_id, "Category" %>
+          <%= n.select :category_id, arr, {} ,:class => "form-control", :required => "required" %>
+        </div>
+
+        <div class="form-group">
+          <%= n.label :name, "Name" %>
+          <%= n.text_field :name, :class => "form-control", :required => "required" %>
+        </div>
+
+        <div class="form-group">
+          <%= n.label :description, "Description" %>
+          <%= n.text_area :description, :class => "form-control", :rows => "6"  %>    
+        </div>
+
+        <div class="form-group">
+          <%= n.label :phone, "Phone" %>
+          <%= n.text_field :phone, :class => "form-control" %>    
+        </div>
+
+        <div class="form-group">
+          <%= n.label :location_city, "City" %>
+          <%= n.text_field :location_city, :class => "form-control" %>    
+        </div>
+
+        <div class="form-group">
+          <%= n.label :location_address, "Location_address" %>
+          <%= n.text_field :location_address, :class => "form-control" %>    
+        </div>
+
+        <div class="form-group">
+          <%= n.label :coordinate_lat, "coordinate_lat" %>
+          <%= n.text_field :coordinate_lat, :class => "form-control" %>    
+        </div>
+
+        <div class="form-group">
+          <%= n.label :coordinate_lon, "coordinate_lon" %>
+          <%= n.text_field :coordinate_lon, :class => "form-control" %>    
+        </div>
+
+        <% if @store.photo.exists? %>
+          <%= image_tag @store.photo.url(:medium) %>
+          <br>
+            Delete file: <%= check_box_tag "destroy_photo", "1" %>
+          <br><br>
+        <% end %>
+
+        <div class="form-group">
+          <%= n.file_field :photo %>
+        </div> 
+
+      </div>
+    </div>
+  </div>
+  <div class="col-md-5">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h3 class="panel-title">Store info</h3>
+      <h3 class="panel-title">營業資訊 (時間、票價)</h3>
     </div>
-    <div class="panel-body">
-      <div class="form-group">
-        <%= n.label :category_id, "Category" %>
-        <%= n.select :category_id, arr, {} ,:class => "form-control", :required => "required" %>
-      </div>
+      <div class="panel-body">
+        <div class="form-group">
+          <%= n.label :hours_monday, "星期一" %>
+          <%= n.text_area :hours_monday, :class => "form-control" %>    
+        </div>
+        <div class="form-group">
+          <%= n.label :hours_tuesday, "星期二" %>
+          <%= n.text_area :hours_tuesday, :class => "form-control" %>    
+        </div>
 
-      <div class="form-group">
-        <%= n.label :name, "Name" %>
-        <%= n.text_field :name, :class => "form-control", :required => "required" %>
-      </div>
+        <div class="form-group">
+          <%= n.label :hours_wensday, "星期三" %>
+          <%= n.text_area :hours_wensday, :class => "form-control" %>    
+        </div>
 
-      <div class="form-group">
-        <%= n.label :description, "Description" %>
-        <%= n.text_area :description, :class => "form-control", :rows => "6"  %>    
-      </div>
+        <div class="form-group">
+          <%= n.label :hours_thursday, "星期四" %>
+          <%= n.text_area :hours_thursday, :class => "form-control" %>    
+        </div>
 
-      <div class="form-group">
-        <%= n.label :phone, "Phone" %>
-        <%= n.text_field :phone, :class => "form-control" %>    
-      </div>
+        <div class="form-group">
+          <%= n.label :hours_friday, "星期五" %>
+          <%= n.text_area :hours_friday, :class => "form-control" %>    
+        </div>
 
-      <div class="form-group">
-        <%= n.label :location_city, "City" %>
-        <%= n.text_field :location_city, :class => "form-control" %>    
-      </div>
+        <div class="form-group">
+          <%= n.label :hours_saturday, "星期六" %>
+          <%= n.text_area :hours_saturday, :class => "form-control" %>    
+        </div>
 
-      <div class="form-group">
-        <%= n.label :location_address, "Location_address" %>
-        <%= n.text_field :location_address, :class => "form-control" %>    
-      </div>
-
-      <% if @store.photo.exists? %>
-        <%= image_tag @store.photo.url(:medium) %>
-        <br>
-          Delete file: <%= check_box_tag "destroy_photo", "1" %>
-        <br><br>
-      <% end %>
-
-      <div class="form-group">
-        <%= n.file_field :photo %>
-      </div> 
-
-    </div>
-  </div>
-</div>
-<div class="col-md-5">
-<div class="panel panel-primary">
-  <div class="panel-heading">
-    <h3 class="panel-title">營業資訊 (時間、票價)</h3>
-  </div>
-    <div class="panel-body">
-      <div class="form-group">
-        <%= n.label :hours_monday, "星期一" %>
-        <%= n.text_area :hours_monday, :class => "form-control" %>    
-      </div>
-      <div class="form-group">
-        <%= n.label :hours_tuesday, "星期二" %>
-        <%= n.text_area :hours_tuesday, :class => "form-control" %>    
-      </div>
-
-      <div class="form-group">
-        <%= n.label :hours_wensday, "星期三" %>
-        <%= n.text_area :hours_wensday, :class => "form-control" %>    
-      </div>
-
-      <div class="form-group">
-        <%= n.label :hours_thursday, "星期四" %>
-        <%= n.text_area :hours_thursday, :class => "form-control" %>    
-      </div>
-
-      <div class="form-group">
-        <%= n.label :hours_friday, "星期五" %>
-        <%= n.text_area :hours_friday, :class => "form-control" %>    
-      </div>
-
-      <div class="form-group">
-        <%= n.label :hours_saturday, "星期六" %>
-        <%= n.text_area :hours_saturday, :class => "form-control" %>    
-      </div>
-
-      <div class="form-group">
-        <%= n.label :hours_sunday, "星期日" %>
-        <%= n.text_area :hours_sunday, :class => "form-control" %>    
+        <div class="form-group">
+          <%= n.label :hours_sunday, "星期日" %>
+          <%= n.text_area :hours_sunday, :class => "form-control" %>    
+        </div>
       </div>
     </div>
   </div>
 </div>
-
 
 
 
