--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,64 +48,70 @@
   </div>
 </nav>
 
+<% if @controller.first(6) == 'devise' %>
+  <div class="col-md-4 col-md-offset-4">
+    <%= yield %>
+  </div>
+<% end %>
 
-<%= yield %>
-
-
-
-<div class="col-xs-12">
-  <footer>
-    <div class="container">
-      <div class="col-xs-6 col-md-4 foot1">
-        <h3>INFO</h3>
-        <div class="foot-line"></div>
-        <ul>
-          <li><p><%= link_to "首頁", root_path %></p></li>
-          <li><p><%= link_to "活動訊息", events_path %></p></li>
-          <li><p><%= link_to "精選夜店", stores_path %></p></li>
-          <li><p><%= link_to "DJ", djs_path %></p></li>
-        </ul>
+<% unless @controller.first(6) == 'devise' %>
+  <%= yield %>
+<!-- footer -->
+  <div class="col-xs-12">
+    <footer>
+      <div class="container">
+        <div class="col-xs-6 col-md-4 foot1">
+          <h3>INFO</h3>
+          <div class="foot-line"></div>
+          <ul>
+            <li><p><%= link_to "首頁", root_path %></p></li>
+            <li><p><%= link_to "活動訊息", events_path %></p></li>
+            <li><p><%= link_to "精選夜店", stores_path %></p></li>
+            <li><p><%= link_to "DJ", djs_path %></p></li>
+          </ul>
+        </div>
+        <div class="col-xs-6 col-md-4 foot2">
+          <h3>SERVICE</h3>
+          <div class="foot-line"></div>
+          <ul>
+            <li><p>消費資詢</p></li>
+            <li><p>包廂訂位</p></li>
+            <li><p>包場服務</p></li>
+            <li><p>活動企劃</p></li>
+            <li><p>私人派對</p></li>
+            <li><p>校際聯誼</p></li>
+          </ul> 
+        </div>
+        <div class="col-xs-12 col-md-4 foot3">
+          <h3>CONTACT US</h3>
+          <div class="foot-line"></div>
+          <br>
+          <%= form_for @contact, :url => contacts_path do |f|  %>
+            <div class="form-group">
+              <%= f.label :name, "Name" %>
+              <%= f.text_field :name, :class => "form-control", :required => "required" %>
+            </div>
+            <div class="form-group">
+              <%= f.label :phone, "Phone number" %>
+              <%= f.text_field :phone, :class => "form-control", :required => "required", :"input type" => 'tel' %>
+            </div>
+            <div class="form-group has-feedback">
+              <%= f.label :email, "Email address" %>
+              <div class="email-val"></div>
+              <%= f.text_field :email, :class => "form-control", :required => "required", :"input type" => 'email', :id => "email-input" %>
+            </div>
+            <div class="form-group">
+              <%= f.label :message, "Message" %>
+              <%= f.text_area :message, :class => "form-control", :required => "required" %>    
+            </div>
+            <%= f.submit "SUBMIT", :class => "btn btn-default btn-contact" %>
+          <% end %>
+        </div>
       </div>
-      <div class="col-xs-6 col-md-4 foot2">
-        <h3>SERVICE</h3>
-        <div class="foot-line"></div>
-        <ul>
-          <li><p>消費資詢</p></li>
-          <li><p>包廂訂位</p></li>
-          <li><p>包場服務</p></li>
-          <li><p>活動企劃</p></li>
-          <li><p>私人派對</p></li>
-          <li><p>校際聯誼</p></li>
-        </ul> 
-      </div>
-      <div class="col-xs-12 col-md-4 foot3">
-        <h3>CONTACT US</h3>
-        <div class="foot-line"></div>
-        <br>
-        <%= form_for @contact, :url => contacts_path do |f|  %>
-          <div class="form-group">
-            <%= f.label :name, "Name" %>
-            <%= f.text_field :name, :class => "form-control", :required => "required" %>
-          </div>
-          <div class="form-group">
-            <%= f.label :phone, "Phone number" %>
-            <%= f.text_field :phone, :class => "form-control", :required => "required", :"input type" => 'tel' %>
-          </div>
-          <div class="form-group has-feedback">
-            <%= f.label :email, "Email address" %>
-            <div class="email-val"></div>
-            <%= f.text_field :email, :class => "form-control", :required => "required", :"input type" => 'email', :id => "email-input" %>
-          </div>
-          <div class="form-group">
-            <%= f.label :message, "Message" %>
-            <%= f.text_area :message, :class => "form-control", :required => "required" %>    
-          </div>
-          <%= f.submit "SUBMIT", :class => "btn btn-default btn-contact" %>
-        <% end %>
-      </div>
-    </div>
-  </footer>
-</div>
+    </footer>
+  </div>
+
+<% end %>
 
 <!-- Modal -->
 <div class="modal fade" id="vip-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
