--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -9,6 +9,7 @@ $light: rgba(255,255,255,0.3);
 
 
 footer {
+  margin-top: 150px;
   background: #111;
   // border-top: 1px solid #aaa;
   .foot-line {
