--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,9 +2,7 @@
 <div class="container event-container">
   <div id="wrap" class="">
     <% @event.each do |x| %>
-      <div class="box">
         <%= link_to image_tag(x.edm.url), event_path(x) %>
-      </div>
     <% end %>
   </div>
 </div>
@@ -14,15 +12,10 @@
 <script>
   $(document).ready(function(e){
 
-    if ($(window).width() < 750) {
-
       $("#wrap").addClass("owl-carousel");
       $(".owl-carousel").owlCarousel({
-        items: function(items) {
-            if ($(window).width() > 750) {
-              return 3;
-            }
-          },
+        items: 3,
+        navigation : true,
         slideSpeed: 300,
         paginationSpeed : 400,
         singleItem: function(issingle) {
@@ -31,22 +24,8 @@
             }else {
               return true;
             }
-          },
+          }
       });  
-
-    } else {
-
-      $("#wrap").removeClass("owl-carousel");
-      $(function() {
-        return $('.event-container').imagesLoaded(function() {
-          return $('.event-container').masonry({
-            itemSelector: '.box',
-            isFitWidth: true
-          });
-        });
-      });
-
-    }
-
+     
   })
 </script>
