--- a/app/assets/stylesheets/tipsy.scss
+++ b/app/assets/stylesheets/tipsy.scss
@@ -68,7 +68,8 @@
   }
 
 
-  .wrap {
+// main content
+  #content1 {
     
     img {
       width: 100%;
@@ -90,17 +91,35 @@
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center; 
-      h2 {
-        margin-top: 180px;
-        display: block;
+      .event-info{
         text-align: center;
-        font-size: 5em;
-      }
-      p {
-        margin-top: 50px;
-        display: block;
-        text-align: center;
-        font-size: 1.5em;
+        padding: 10px;
+        h2 {
+          margin-top: 180px;
+          display: block;
+          text-align: center;
+          font-size: 5em;
+        }
+        p {
+          margin-top: 50px;
+          display: block;
+          text-align: center;
+          font-size: 1.5em;
+        }
+        a {
+          position: relative;
+          top: 20px;
+          font-size: 1.5em;
+          padding: 10px 40px 10px 40px;
+          border-radius: 25px;
+          background: #fff;
+          color: #000;
+          text-decoration: none;
+        }
+        a:hover {
+          background: rgba(0,0,0,0.8);
+          color: $lightblue;
+        }
       }
     }
     .rb1 {
@@ -141,7 +160,8 @@
 
   }
 
-  .wrap2 {
+// VIP block
+  #vip {
     .black-wrap{
       position: absolute;
       background: rgba(0,0,0,0.6);
@@ -175,7 +195,7 @@
       border-radius: 25px;
     }
     .vip-btn:hover {
-      background: #888;
+      background: rgba(0,0,0,0.8);
       color: $lightblue;
     }
 
@@ -183,6 +203,37 @@
 
   .modal {
     color: #000;
+  }
+
+  #black-board {
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.8);
+    display: none;
+    .container {
+    padding-top: 5%; 
+      .content {
+      // overflow: hidden;
+      // display: inline;
+        img {
+          width: 250px;
+          transition: transform .3s ease-out; 
+        }
+        img:hover { 
+          transform: scale(1.2);
+        }
+      }
+    }
+    .close-board {
+      color: #fff;
+      font-size: 2em
+    }
+    .close-board:hover {
+      color: $lightblue;
+    }
   }
 
   
