--- a/app/views/tipsy/index.html.erb
+++ b/app/views/tipsy/index.html.erb
@@ -53,6 +53,21 @@
   </div>
 </div>
 
+
+
+<div id="dj-block" class="col-xs-12">
+<div id="content2" class="wrap2 text-center">
+  <div class="jumbotron">
+    <div class="container">
+      <h1>DJ Playlist</h1>
+      <p>先瞭解播歌的風格，不再讓音樂成為噪音！</p><br><br>
+      <p><%= link_to '查看', djs_path, :class => "dj-btn" %></p>
+    </div>
+  </div>
+</div>
+</div>
+
+
 <div id="vip" class="col-xs-12">
 <div id="content2" class="wrap2 text-center">
   <div class="black-wrap"></div>
@@ -73,6 +88,7 @@
     <div class="clearfix"></div>
   </div>
 </div>
+
 
 
 
