--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -80,25 +80,20 @@
   </table>
 
 
-
   <%= form_for @comment, :url => comments_path do |n|  %>
-
-  <%= n.hidden_field :store_id, :value => @store.id %>
-
-  <div id="rating" class="form-group">
-    <%= n.label :rating, "Rating" %>
-    <%= n.hidden_field :rating, :class => "form-control", :name => "score" %>
-    <div class="star"></div>  
-  </div>
-
-  <div class="form-group">
-    <%= n.label :content, "Content" %>
-    <%= n.text_area :content, :class => "form-control", :required => "required", :rows => 5 %>    
-  </div>
-
-  <%= n.submit "Create", :class => "btn btn-primary" %>
-
+    <%= n.hidden_field :store_id, :value => @store.id %>
+    <div id="rating" class="form-group">
+      <%= n.label :rating, "Rating" %>
+      <%= n.hidden_field :rating, :class => "form-control", :name => "score" %>
+      <div class="star"></div>  
+    </div>
+    <div class="form-group">
+      <%= n.label :content, "Content" %>
+      <%= n.text_area :content, :class => "form-control", :required => "required", :rows => 5 %>    
+    </div>
+    <%= n.submit "Create", :class => "btn btn-primary" %>
   <% end %>
+
 
 </div>
 
@@ -106,5 +101,21 @@
 
 <div class="empty100px"></div>
 
+<script>
+  
+$(document).ready(function(e){
 
+  $('.star').raty({ 
+    score: '3'
+  });
 
+  $('.current_score').raty({ 
+    readOnly: true,
+    score: function() {
+      return $(this).attr('data-score');
+    }
+  }); 
+
+});
+
+</script>
