--- a/app/assets/stylesheets/tipsy.scss
+++ b/app/assets/stylesheets/tipsy.scss
@@ -170,13 +170,14 @@
       margin-bottom: 0;
       height: 600px;
       padding-top: 200px;
-      padding-left: 15%;
+      padding-left: 0;
       padding-right: 0;
     }
     .container {
       position: absolute;
       display: block;
       margin: 0 auto;
+      padding-left: 40%;
       width: 100%;
       z-index: 100;
     }
