--- a/app/assets/stylesheets/stores.scss
+++ b/app/assets/stylesheets/stores.scss
@@ -39,9 +39,11 @@
         background: #111;
         overflow-y: scroll; 
         overflow-x: hidden;
-        text-align: center;
-        img {
-          width: 90%;
+        .store-img {
+          text-align: center;
+          img {
+            width: 90%;
+          }
         }
       }
     }
