--- a/app/views/tipsy/index.html.erb
+++ b/app/views/tipsy/index.html.erb
@@ -1,6 +1,7 @@
 <div class="banner">
-  <div id="banner-bg"></div>
-  <div class="black-wrap"></div>
+  <div id="banner-bg">
+    <div class="black-wrap"></div>  
+  </div>
   <div class="jumbotron text-center">
     <div class="container">
       <div class="empty200px"></div>
@@ -60,7 +61,7 @@
   <div class="jumbotron">
     <div class="container">
       <h1>DJ Playlist</h1>
-      <p>先瞭解播歌的風格，不再讓音樂成為噪音！</p><br><br>
+      <p>先瞭解DJ播歌風格，<br>不再讓音樂成為噪音！</p><br><br>
       <p><%= link_to '查看', djs_path, :class => "dj-btn" %></p>
     </div>
   </div>
