--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -57,6 +57,7 @@
       <li role="presentation" class="<%= @where == "admin/store" ? "active" : "" %>"><%= link_to 'Store', admin_store_index_path %></li>
       <li role="presentation" class="<%= @where == "admin/djs" ? "active" : "" %>" ><%= link_to 'DJ', admin_djs_path %></li>
       <li role="presentation" class="<%= @where == "admin/user" ? "active" : "" %>" ><%= link_to 'User', admin_user_index_path %></li>
+      <li role="presentation" class="<%= @where == "admin/tickets" ? "active" : "" %>" ><%= link_to 'Ticket', admin_tickets_path %></li>
     </ul>
   <% end %>
 <% end %>
