check users ticket. add ticket column order_id.

--- a/app/views/admin/vips/index.html.erb
+++ b/app/views/admin/vips/index.html.erb
@@ -1,10 +1,12 @@
 
 <div class="page-header">
-  <h1>Vip</h1>
+  <h1>Vip order</h1>
 </div>
 
 <div class="row">
   <div class="col-md-4">
+
+    <h2>Ticket generate.</h2>
     
     <% user = User.all.map{ |x| [x.name, x.id] } %>
     <% user %>
