--- a/app/views/admin/tickets/index.html.erb
+++ b/app/views/admin/tickets/index.html.erb
@@ -3,17 +3,54 @@
 </div>
   
 
+<div class="row">
+  <div class="col-md-4">
+
+    <h2>Ticket generate.</h2>
+    
+    <% user = User.all.map{ |x| [x.name, x.id] } %>
+    <% user %>
+
+    <%= form_for @ticket_new, :url => admin_tickets_path do |n|  %>
+
+      <div class="form-group">
+        <%= n.label :user_id, "User" %>
+        <%= n.select :user_id, user, {} ,:class => "form-control", :required => "required" %>
+      </div>
+
+      <div class="form-group">
+        <%= n.hidden_field :qrcode, :class => "form-control", :required => "required", :value => SecureRandom.hex(20) %>
+      </div>
+
+      <div class="form-group">
+        <%= n.label :order_id, "Order id" %>
+        <%= n.number_field :order_id, :class => "form-control", :required => "required" %>
+      </div>
+
+      <div class="form-group">
+        <%= n.label :due_time, "Time_due" %>
+        <%= n.datetime_select :due_time, :class => "form-control", :required => "required" %>
+      </div>
+
+      <%= n.submit "Create", :class => "btn btn-primary" %>
+
+    <% end %>
+
+  </div>
+</div>
+
+
 <div class="list-ticket">
   <% @ticket.each do |x| %>
     <div class="col-md-3">
       <div>
         <%= image_tag(RQRCode::QRCode.new(x.qrcode).to_img.resize(200, 200).to_data_url) %>
         <p>Code: <%= x.qrcode %></p>
+        <p>Order: <%= x.order_id %></p>
         <p>User: <%= x.user.name %></p>
         <p>Due_time: <%= x.due_time %></p>
       </div>
     </div>
   <% end %>
 </div>
-
 
