--- a/app/views/admin/store/show.html.erb
+++ b/app/views/admin/store/show.html.erb
@@ -1,8 +1,14 @@
 <h1><%= @store.name %></h1>
 
 
+
 <div class="row">
+  <div class="col-md-3 col-md-offset-1">
+    <%= image_tag(@store.photo.url(:medium)) %>
+  </div>
   <div class="col-md-7">
+
+    <div class="col-xs-12">
     <div class="panel panel-primary">
       <div class="panel-heading">
         <h3 class="panel-title">Store info</h3>
@@ -44,7 +50,7 @@
     </div>
   </div>
 
-  <div class="col-md-5">
+  <div class="col-xs-12">
     <div class="panel panel-primary">
       <div class="panel-heading">
         <h3 class="panel-title">Hours</h3>
@@ -86,6 +92,9 @@
       </div>
     </div>
   </div>
+    
+  </div>
+  
 </div>
 
 <%= link_to "Back", admin_store_index_path, :class => "btn btn-default" %>
